# Treehacks-Winners

./: .gitignore  README.md  agent.py  main.py  requirements.txt
APPLICATION 2 - FLEET/: main.py
APPLICATION 2 - FLEET TESTING/: main.py
adb_handler/: ADBLocalHandler.py  ADBWifiHandler.py
agent/: agent.py
app_fleet_test/: main.py
app_simple_intent_physical_device/: SERVER_OUT.TXT  main.py
app_voicify_ui/: main.py  setup.py
dummy_agent/: execute.py
mobius/: __init__.py  mobile.py  mobius.py  pyproject.toml  setup.py
mobius-test/: pyvenv.cfg
mobius-test/Scripts/: activate  activate.bat
mobius/mobius/: __init__.py
mobius/mobius.egg-info/: PKG-INFO  SOURCES.txt
mobius/mobius/api/: __init__.py  server.py  state.py
mobius/mobius/api/routes/: __init__.py  do.py
mobius/mobius/functionality/adb_handler/: ADBHandler.py  ADBLocalHandler.py  ADBWifiHandler.py  __init__.py  adbhandler_readme.txt
mobius/mobius/functionality/agent/: __init__.py  execute.py
mobius/mobius/functionality/dummy_agent/: __init__.py  execute.py
mobius/mobius/functionality/emulation/: __init__.py  create.py  serverwrapper.py
mobius/mobius/models/: __init__.py  activetask.py  dorequest.py
mobius/src/api/: server.py
mobius/src/api/routes/: __init__.py  do.py
mobius/src/functionality/dummy_agent/: execute.py
mobius/src/mobius.egg-info/: PKG-INFO  SOURCES.txt
mobius/src/models/: __init__.py  activetask.py
models/: __init__.py  dorequest.py
routes/: do.py
